WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13837
Separator in new <select> widget disappears when block element with border is in document.
https://bugs.webkit.org/show_bug.cgi?id=13837
Summary
Separator in new <select> widget disappears when block element with border is...
Elliott Sprehn
Reported
2007-05-22 21:58:24 PDT
The vertical separator line between the text and the two triangles in the select widget disappears when another block element with a border is in the same document. The line appears if you select another application instead of Webkit, or if you scroll past it, or interact in some other misc. ways with the page. Reproducible with latest nightly. (Tue May 22 9:40:54 GMT 2007,
r21639
).
Attachments
Test Case
(574 bytes, text/html)
2007-05-22 21:59 PDT
,
Elliott Sprehn
no flags
Details
Set stroke parameters
(12.13 KB, patch)
2007-05-23 04:05 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Set stroke parameters
(12.10 KB, patch)
2007-05-23 04:24 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Another attempt
(11.68 KB, patch)
2007-05-23 09:41 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Elliott Sprehn
Comment 1
2007-05-22 21:59:39 PDT
Created
attachment 14676
[details]
Test Case
David Kilzer (:ddkilzer)
Comment 2
2007-05-22 22:50:25 PDT
Wow, that's subtle! Confirmed with a local debug build of WebKit
r21639
with Safari 2.0.4 (419.3) on Mac OS X 10.4.9 (8P135).
David Kilzer (:ddkilzer)
Comment 3
2007-05-22 22:52:21 PDT
Not sure if this is a regression or not since the pop-up in the test case looks different with shipping Safari.
Elliott Sprehn
Comment 4
2007-05-22 22:57:45 PDT
(In reply to
comment #3
)
> Not sure if this is a regression or not since the pop-up in the test case looks > different with shipping Safari. >
Shipping Safari doesn't allow styling select menus. The test case uses a border on the select widget to specifically get the one you can style because that's where the bug shows up. It doesn't happen with the Aqua widget.
mitz
Comment 5
2007-05-23 01:17:25 PDT
Probably missing explicit setStrokeThickness().
mitz
Comment 6
2007-05-23 04:05:28 PDT
Created
attachment 14678
[details]
Set stroke parameters
David Kilzer (:ddkilzer)
Comment 7
2007-05-23 04:18:28 PDT
Comment on
attachment 14678
[details]
Set stroke parameters
>+ CGMutablePathRef path = CGPathCreateMutable();// CGContextBeginPath(context);
Why the commented-out code?
mitz
Comment 8
2007-05-23 04:23:06 PDT
(In reply to
comment #7
)
> (From update of
attachment 14678
[details]
[edit]) > >+ CGMutablePathRef path = CGPathCreateMutable();// CGContextBeginPath(context); > > Why the commented-out code? >
Oops. Thanks for noticing!
mitz
Comment 9
2007-05-23 04:24:08 PDT
Created
attachment 14679
[details]
Set stroke parameters
Darin Adler
Comment 10
2007-05-23 09:14:00 PDT
Comment on
attachment 14679
[details]
Set stroke parameters r=me But shouldn't we call CGContextBeginPath before calling CGContextAddPath?
mitz
Comment 11
2007-05-23 09:26:22 PDT
Comment on
attachment 14679
[details]
Set stroke parameters I think I should just use CGContextDrawPath.
mitz
Comment 12
2007-05-23 09:41:44 PDT
Created
attachment 14689
[details]
Another attempt
Darin Adler
Comment 13
2007-05-24 09:46:19 PDT
Comment on
attachment 14689
[details]
Another attempt r=me
Adele Peterson
Comment 14
2007-05-24 11:09:42 PDT
Committed revision 21719.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug