LayoutTests:

Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13837
          Separator in new <select> widget disappears when block element with border is in document.

        * fast/forms/menulist-separator-painting-expected.checksum: Added.
        * fast/forms/menulist-separator-painting-expected.png: Added.
        * fast/forms/menulist-separator-painting-expected.txt: Added.
        * fast/forms/menulist-separator-painting.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13837
          Separator in new <select> widget disappears when block element with border is in document.

        Test: fast/forms/menulist-separator-painting.html

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::drawConvexPolygon): Changed this function to
        actually do both filling and stroking when needed, even though all existing
        callers set the stroke to none.
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::paintMenuListButton): Added calls to set the stroke
        style and thickness when painting the arrows and the separator.



Canonical link: https://commits.webkit.org/18128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21719 268f45cc-cd09-0410-ab3c-d52691b4dbfc